Uplift to latest swe, fix controller wiring, use latest selenium helper to manage web driver